[project]
name = "ComfyUI-SAUS"
author = "dsigmabcn"
description = "SAUS: Simple App U See. A simple alternative User Interface for Image and Video Generation using ComfyUI as backend. It is not a replacement for workflow creation.\n Workflows are presented as mini-apps 'ready-to-go' that only require filling in the main parameters. No need to handle the nodes and spaghetti connections ."
version = "0.5.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/dsigmabcn/ComfyUI-SAUS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "disty"
DisplayName = "ComfyUI-disty-Flow"
Icon = ""
