[project]
name = "ComfyUI-SAUS"
description = "A Simple App U See. A simple alternative User Interface for Image and Video Generation using ComfyUI as backend."
version = "0.2.1"
license = {file = "LICENSE"} 
classifiers = [
#     # For OS-independent nodes (works on all operating systems)
     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
 ]

dependencies = []

[project.urls]
Repository = "https://github.com/dsigmabcn/ComfyUI-SAUS"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/dsigmabcn/ComfyUI-SAUS/wiki"
"Bug Tracker" = "https://github.com/dsigmabcn/ComfyUI-SAUS/issues"

[tool.comfy]
PublisherId = "koalanation"
DisplayName = "KN-AI"
Icon = "https://raw.githubusercontent.com/dsigmabcn/ComfyUI-SAUS/refs/heads/main/web/core/media/ui/saus_logo.png"
Banner = "https://raw.githubusercontent.com/dsigmabcn/ComfyUI-SAUS/refs/heads/main/web/core/media/git/cover_SAUS.jpg"
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

